k8s/apps/monitoring/manifests/pyrra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    probe-uri: /-/healthy
    item.homer.rajsingh.info/name: "Pyrra"
    item.homer.rajsingh.info/logo: "https://avatars.githubusercontent.com/u/87393422?s=200&v=4"
    item.homer.rajsingh.info/order: "30"
    service.homer.rajsingh.info/name: "Administration"
    service.homer.rajsingh.info/icon: "fa fa-user-shield"
    service.homer.rajsingh.info/order: "10"
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: pyrra
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.6.3
    homer.rajsingh.info/enabled: "true"
  name: pyrra-api
  namespace: monitoring
spec:
  ingressClassName: public
  rules:
    - host: pyrra.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: pyrra-api
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pyrra.ankhmorpork.thaum.xyz
      secretName: pyrra-api-tls
